@@ -111,6 +111,10 @@ setGeneric("fillPeaks.chrom", function(object, ...)
 setGeneric("fillPeaks.MSW", function(object, ...)
     standardGeneric("fillPeaks.MSW"))
 setGeneric("fillPeaks", function(object, ...) standardGeneric("fillPeaks"))
+setGeneric("filterColumnsIntensityAbove", function(object, ...)
+    standardGeneric("filterColumnsIntensityAbove"))
+setGeneric("filterColumnsKeepTop", function(object, ...)
+    standardGeneric("filterColumnsKeepTop"))
 setGeneric("findChromPeaks", function(object, param, ...)
            standardGeneric("findChromPeaks"))
 setGeneric("findMZ", function(object, find, ppmE=25, print=TRUE)
