@@ -1,0 +1,89 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/methods-Chromatograms.R,
+%   R/methods-XChromatograms.R
+\name{filterColumnsIntensityAbove,Chromatograms-method}
+\alias{filterColumnsIntensityAbove,Chromatograms-method}
+\alias{filterColumnsIntensityAbove}
+\alias{filterColumnsIntensityAbove,XChromatograms-method}
+\title{Filtering sets of chromatographic data}
+\usage{
+\S4method{filterColumnsIntensityAbove}{Chromatograms}(
+  object,
+  threshold = 0,
+  value = c("bpi", "tic"),
+  which = c("any", "all")
+)
+
+\S4method{filterColumnsIntensityAbove}{XChromatograms}(
+  object,
+  threshold = 0,
+  value = c("bpi", "tic", "maxo", "into"),
+  which = c("any", "all")
+)
+}
+\arguments{
+\item{object}{\code{\link[=Chromatograms]{Chromatograms()}} or \code{\link[=XChromatograms]{XChromatograms()}} object.}
+
+\item{threshold}{for \code{filterColumnsIntensityAbove}: \code{numeric(1)} with the
+threshold value to compare against.}
+
+\item{value}{\code{character(1)} defining which value should be used in the
+comparison or sorting. Can be \code{value = "bpi"} (default) to use the
+maximum intensity per chromatogram or \code{value = "tic"} to use the sum
+of intensities per chromatogram. For \code{\link[=XChromatograms]{XChromatograms()}} objects also
+\code{value = "maxo"} and \code{value = "into"} is supported to use the maximum
+intensity or the integrated area of identified chromatographic peaks
+in each chromatogram.}
+
+\item{which}{for \code{filterColumnsIntensityAbove}: \code{character(1)} defining
+whether \strong{any} (\code{which = "any"}, default) or \strong{all} (\code{which = "all"})
+chromatograms in a column have to fulfill the criteria for the column
+to be kept.}
+}
+\description{
+These functions allow to filter (subset) \code{\link[=Chromatograms]{Chromatograms()}} or
+\code{\link[=XChromatograms]{XChromatograms()}} objects, i.e. sets of chromatographic data, without
+changing the data (intensity and retention times) within the individual
+chromatograms (\code{\link[=Chromatogram]{Chromatogram()}} objects).
+\itemize{
+\item \code{filterColumnsIntensityAbove}: subsets a \code{Chromatograms} objects keeping
+only columns (samples) for which \code{value} is larger than the provided
+\code{threshold} in \code{which} rows (i.e. if \code{which = "any"} a
+column is kept if \strong{any} of the chromatograms in that column have a
+\code{value} larger than \code{threshold} or with \code{which = "all"} \strong{all}
+chromatograms in that column fulfill this criteria). Parameter \code{value}
+allows to define on which value the comparison should be performed, with
+\code{value = "bpi"} the maximum intensity of each chromatogram is compared to
+\code{threshold}, with \verb{value = "tic" the total sum of intensities of each chromatogram is compared to }threshold\verb{. For }XChromatograms\verb{object,}value = "maxo"\code{and}value = "into"\verb{are supported which compares the largest intensity of all identified chromatographic peaks in the chromatogram with}threshold`, or the integrated peak area, respectively.
+}
+}
+\examples{
+
+chr1 <- Chromatogram(rtime = 1:10 + rnorm(n = 10, sd = 0.3),
+    intensity = c(5, 29, 50, NA, 100, 12, 3, 4, 1, 3))
+chr2 <- Chromatogram(rtime = 1:10 + rnorm(n = 10, sd = 0.3),
+    intensity = c(80, 50, 20, 10, 9, 4, 3, 4, 1, 3))
+chr3 <- Chromatogram(rtime = 3:9 + rnorm(7, sd = 0.3),
+    intensity = c(53, 80, 130, 15, 5, 3, 2))
+
+chrs <- Chromatograms(list(chr1, chr2, chr1, chr3, chr2, chr3),
+    ncol = 3, byrow = FALSE)
+chrs
+
+## Keep all columns with for which the maximum intensity of any of its
+## chromatograms is larger 90
+filterColumnsIntensityAbove(chrs, threshold = 90)
+
+## Require that ALL chromatograms in a column have a value larger 90
+filterColumnsIntensityAbove(chrs, threshold = 90, which = "all")
+
+## If none of the columns fulfills the criteria no columns are returned
+filterColumnsIntensityAbove(chrs, threshold = 900)
+
+## Filtering XChromatograms allow in addition to filter on the columns
+## "maxo" or "into" of the identified chromatographic peaks within each
+## chromatogram.
+}
+\author{
+Johannes Rainer
+}
