@@ -132,3 +132,35 @@ test_that("removeIntensity,Chromatograms works", {
     expect_equal(intensity(res[2, 2]), c(53, 80, 130, NA_real_, NA_real_,
                                          NA_real_, NA_real_))
 })
+
+test_that("filterColumnsIntensityAbove,Chromatograms works", {
+    chr1 <- Chromatogram(rtime = 1:10 + rnorm(n = 10, sd = 0.3),
+                         intensity = c(5, 29, 50, NA, 100, 12, 3, 4, 1, 3))
+    chr2 <- Chromatogram(rtime = 1:10 + rnorm(n = 10, sd = 0.3),
+                         intensity = c(80, 50, 20, 10, 9, 4, 3, 4, 1, 3))
+    chr3 <- Chromatogram(rtime = 3:9 + rnorm(7, sd = 0.3),
+                         intensity = c(53, 80, 130, 15, 5, 3, 2))
+    chrs <- Chromatograms(list(chr1, chr2, chr3, chr1, chr2, chr3), ncol = 3)
+
+    expect_error(filterColumnsIntensityAbove(chrs, threshold = c(1.1, 1.4)),
+                 "should be")
+    expect_error(filterColumnsIntensityAbove(chrs, threshold = TRUE),
+                 "should be")
+
+    res <- filterColumnsIntensityAbove(chrs)
+    expect_equal(res, chrs)
+
+    res <- filterColumnsIntensityAbove(chrs, threshold = 90)
+    expect_equal(res, chrs)
+
+    res <- filterColumnsIntensityAbove(chrs, threshold = 90, which = "all")
+    expect_equal(res, chrs[, 2])
+
+    res <- filterColumnsIntensityAbove(chrs, threshold = 200, which = "any",
+                                       value = "tic")
+    expect_equal(res, chrs)
+
+    res <- filterColumnsIntensityAbove(chrs, threshold = 200, which = "all",
+                                       value = "tic")
+    expect_equal(res, chrs[, 2])
+})
