@@ -1,5 +1,8 @@
 Changes in version 3.11.1
 
+- Add filterColumnsIntensityAbove method for Chromatograms object that allows
+  to select columns (samples) of an Chromatograms object for which intensities
+  of its chromatographic data are higher than a threshold.
 - Add removeIntensity method for Chromatogram, Chromatograms, XChromatogram
   and XChromatograms objects allowing to *remove* intensities based on different
   criteria.
